# on-line-chatting-service

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  Client.cpp  Server.cpp
include/Client/: Network.hpp  WindowController.hpp
include/Client/Windows/: ChatRoomWindow.hpp  InputWindow.hpp  LoginWindow.hpp  ReceivingWindow.hpp  WindowConfig.hpp  Windows.hpp
include/Server/: .SingleThreadServer.hpp.swp  AbstractServer.hpp  MultiProcessServer.hpp  MultiThreadServer.hpp  SingleThreadServer.hpp  src
include/Services/Connection/: Errexit.hpp
include/Services/Connection/Connect/: ConnectSock.hpp  ConnectTCP.hpp  ConnectUDP.hpp
include/Services/Connection/Passive/: PassiveSock.hpp  PassiveTCP.hpp  PassiveUDP.hpp
include/Services/Protocols/: MessageWrapper.hpp
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  Network.cpp  WindowController.cpp
src/Client/Windows/: CMakeLists.txt  ChatRoomWindow.cpp  InputWindow.cpp  LoginWindow.cpp  ReceivingWindow.cpp
src/Server/: AbstractServer.cpp  CMakeLists.txt  MultiThreadServer.cpp  SingleThreadServer.cpp
src/Services/: CMakeLists.txt
src/Services/Connection/: CMakeLists.txt  Errexit.cpp
src/Services/Connection/Connect/: CMakeLists.txt  ConnectSock.cpp  ConnectTCP.cpp  ConnectUDP.cpp
src/Services/Connection/Passive/: CMakeLists.txt  PassiveSock.cpp  PassiveTCP.cpp  PassiveUDP.cpp
src/Services/Protocols/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
